--- a/publish/_html/sbe/guide/select.html
+++ b/publish/_html/sbe/guide/select.html
@@ -50,15 +50,17 @@
 		<div class="contents">
 
 			<span class="inp_combo">
-				<button role="combobox" aria-haspopup="true" aria-expanded="false" aria-labelledby="combobox01" type="button" onclick="layerOpenFn('#combobox01', this);">
-					<span class="combo_title" aria-hidden="false">출금계좌</span>
+				<button type="button" role="combobox" aria-haspopup="true" aria-expanded="false" aria-labelledby="combobox01" onclick="layerOpenFn('#combobox01', this);">
+					<span class="combo_title" aria-hidden="true">출금계좌</span>
 				</button>
 			</span>
+
 			<br />
 			<br />
+
 			<span class="inp_combo">
-				<button role="combobox" aria-haspopup="true" aria-expanded="false" aria-labelledby="combobox01" type="button" onclick="layerOpenFn('#combobox01', this);">
-					<span class="combo_title" aria-hidden="false">출금계좌</span>
+				<button type="button" role="combobox" aria-haspopup="true" aria-expanded="false" aria-labelledby="combobox02" onclick="layerOpenFn('#combobox02', this);">
+					<span class="combo_title" aria-hidden="true">출금계좌</span>
 				</button>
 			</span>
 
@@ -100,6 +102,58 @@
 								</li>
 								<li>
 									<button type="button" class="combo_opt">
+										<span>옵션06</span>
+									</button>
+								</li>
+							</ul>
+						</div>
+					</div>
+				</div>
+				
+				<!-- <button type="button" class="layer_close"><em class="blind">닫기</em></button> -->
+			</div>
+		</article>
+
+		<article class="layer_wrap float_bottom" id="combobox02" role="listBox" aria-hidden="true">
+			<div class="layer_box">
+
+				<div class="layer_container">
+					<div class="layer_contents">
+						<div class="combo_list_wrap">
+							<ul class="combo_list">
+								<li>
+									<button type="button" class="combo_opt">
+										<span>옵션01</span>
+										<span>옵션01</span>
+									</button>
+								</li>
+								<li>
+									<button type="button" class="combo_opt">
+										<span>옵션02</span>
+										<span>옵션02</span>
+									</button>
+								</li>
+								<li>
+									<button type="button" class="combo_opt">
+										<span>옵션03</span>
+										<span>옵션03</span>
+									</button>
+								</li>
+								<li>
+									<button type="button" class="combo_opt">
+										<span>옵션04</span>
+										<span>옵션04</span>
+									</button>
+								</li>
+								<li>
+									<button type="button" class="combo_opt">
+										<span>옵션05</span>
+										<span>옵션05</span>
+									</button>
+								</li>
+								<li>
+									<button type="button" class="combo_opt">
+										<span>옵션06</span>
 										<span>옵션06</span>
 									</button>
 								</li>
