폴더명 수정

--- a/publish/_html/mbe/guide/select.html
+++ b/publish/_html/mbe/guide/select.html
@@ -21,7 +21,7 @@
 	<header id="header">
 		<div class="header_inner">
 			<h1 class="logo">부산은행</h1>
-			<button type="button" class="btn_gnb" aria-haspopup="true" aria-controls="gnbWrap" aria-expanded="false">GNB MENU</button>
+			<button type="button" class="btn_gnb" aria-haspopup="true" aria-controls="gnbWrap">GNB MENU</button>
 		</div>
 	</header>
 	<!-- //header -->
@@ -50,7 +50,7 @@
 		<div class="contents">
 
 			<span class="inp_combo">
-				<button type="button" role="combobox" aria-haspopup="true" aria-expanded="false" aria-labelledby="combobox01" onclick="layerOpenFn('#combobox01', this);">
+				<button type="button" role="combobox" aria-haspopup="true" aria-labelledby="combobox01" onclick="layerOpenFn('#combobox01', this);">
 					<span class="combo_title" aria-hidden="true">출금계좌</span>
 				</button>
 			</span>
@@ -59,7 +59,7 @@
 			<br />
 
 			<span class="inp_combo">
-				<button type="button" role="combobox" aria-haspopup="true" aria-expanded="false" aria-labelledby="combobox02" onclick="layerOpenFn('#combobox02', this);">
+				<button type="button" role="combobox" aria-haspopup="true" aria-labelledby="combobox02" onclick="layerOpenFn('#combobox02', this);">
 					<span class="combo_title" aria-hidden="true">출금계좌</span>
 				</button>
 			</span>
