--- a/publish/_html/mbe/guide/tab.html
+++ b/publish/_html/mbe/guide/tab.html
@@ -21,7 +21,7 @@
 	<header id="header">
 		<div class="header_inner">
 			<h1 class="logo">부산은행</h1>
-			<button type="button" class="btn_gnb" aria-haspopup="true" aria-controls="gnbWrap" aria-expanded="false">GNB MENU</button>
+			<button type="button" class="btn_gnb" aria-haspopup="true" aria-controls="gnbWrap">GNB MENU</button>
 		</div>
 	</header>
 	<!-- //header -->
@@ -45,34 +45,49 @@
 
 	<!-- container -->
 	<div id="container">
+
 		<!-- contents -->
 		<div class="contents">
-			<!-- <div style="height:100px;"></div> -->
-			<button type="button" aria-haspopup="true" aria-expanded="false" onclick="layerOpenFn('#exLayer01', this);">layer open ex01</button>
+
+			<div class="tab_list_wrap" tab-name="tabEx">
+				<div class="tab_list_inner">
+					<ul role="tablist">
+						<li class="tab_item">
+							<button type="button" role="tab"><em>TAB01</em></button>
+						</li>
+						<li class="tab_item disabled">
+							<button type="button" role="tab"><em>TAB02</em></button>
+						</li>
+						<li class="tab_item active">
+							<button type="button" role="tab"><em>TAB03</em></button>
+						</li>
+						<li class="tab_item">
+							<button type="button" role="tab"><em>TAB04</em></button>
+						</li>
+					</ul>
+				</div>
+			</div>
+
+			<div class="tab_panel_wrap" tab-name="tabEx">
+		
+				<div role="tabpanel" class="tab_panel" style="background-color:orange;" tabindex="0">
+					button tab panel01
+				</div>
+				<div role="tabpanel" class="tab_panel" style="background-color:violet;" tabindex="0">
+					button tab panel02
+				</div>
+				<div role="tabpanel" class="tab_panel" style="background-color:burlywood;" tabindex="0">
+					button tab panel03
+				</div>
+				<div role="tabpanel" class="tab_panel" style="background-color:darkcyan;color:#fff;" tabindex="0">
+					button tab panel04
+				</div>
+
+			</div>
+		
+
 		</div>
 		<!-- //contents -->
-
-		<!-- layer -->
-		<article class="layer_wrap" id="exLayer01" role="dialog" aria-hidden="true">
-			<div class="layer_box">
-				<div class="layer_header">
-					<h1 class="layer_title">layer_title</h1>
-				</div>
-				
-				<div class="layer_container">
-					<div class="layer_contents">
-						layer_contents<br />
-						layer_contents<br />
-						layer_contents<br />
-						layer_contents<br />
-						layer_contents
-					</div>
-				</div>
-				
-				<button type="button" class="layer_close"><em class="blind">닫기</em></button>
-			</div>
-		</article>
-		<!-- layer -->
 
 	</div>
 	<!-- //container -->
@@ -85,6 +100,18 @@
 	<!-- //footer -->
 </div>
 <!-- //wrap -->
+
+<script>
+
+var tabExFnc = new tabControlFn('[tab-name="tabEx"]', {
+	panelChangeAfter : function(idx, panelEl) {
+		// panel 변경 후 콜백 함수
+		// idx : 현재 활성화된 탭 인덱스 번호
+		// panelEl : 현재 활성화된 tabpanel 엘레멘트
+	}
+});
+
+</script>
 
 </body>
 </html>
