--- a/publish/_html/mbe/left.html
+++ b/publish/_html/mbe/left.html
@@ -129,8 +129,8 @@ html {overflow-y:auto;}
 							<li><a href="./guide/directory.html" target="loFrmContent">- Directory List</a></li>
 						</ul>
 					</li>
-					<li><a href="./guide/tab.html" target="loFrmContent">tab</a></li>
-					<li><a href="./guide/select.html" target="loFrmContent">select</a></li>
+					<li><a href="./guide/tab.html" target="loFrmContent">TAB</a></li>
+					<li><a href="./guide/select.html" target="loFrmContent">SELECT</a></li>
 					<li><a href="./guide/layer.html" target="loFrmContent">LAYER POPUP</a></li>
 				</ul>
 			</li>
