--- a/publish/_html/mbe/guide/css_rule.html
+++ b/publish/_html/mbe/guide/css_rule.html
@@ -7,11 +7,12 @@
 <meta name="MobileOptimized" content="320" />
 <meta name="format-detection" content="telephone = no" />
 <title>부산은행 기업금융 비대면 채널 개선</title>
-<link rel="stylesheet" href="../../../resources/css/sbe/reset.css">
-<link rel="stylesheet" href="../../../resources/css/sbe/fonts.css">
+<link rel="stylesheet" href="../../../resources/css/mbe/reset.css">
+<link rel="stylesheet" href="../../../resources/css/mbe/fonts.css">
 <link rel="stylesheet" href="./css/guide.css">
+<link rel="stylesheet" href="./js/inc_publish.js">
 
-<script type="text/javascript" src="../../../resources/js/sbe/jquery-3.6.0.min.js"></script>
+<script type="text/javascript" src="../../../resources/js/mbe/jquery-3.6.0.min.js"></script>
 
 <style>
 	.guide_box{margin-top:15px;}
@@ -31,7 +32,7 @@
 			<li>한개의 파일에서 CSS 파일을 @import로 추가 호출 한다.</li>
 			<li>모든 속성은 영문 소문자로만 작성</li>
 			<li>이미지 3배수 처리한다. (원사이즈/3)</li>
-			<li>폰트 : rem, 폰트관련 width, height 도 rem 을 사용한다</li>
+			<li>폰트 : px, 폰트관련 width, height 도 px 을 사용한다</li>
 			<li>margin, padding, border, background 는 px로 사용한다</li>
 			<li>CSS의 주석은 시작만 작성</li>
 			<li>객체 구분을 위한 코드 그룹간 빈 한 줄 허용(한 줄만 허용)</li>
