--- a/publish/_html/mbe/guide/directory.html
+++ b/publish/_html/mbe/guide/directory.html
@@ -7,11 +7,11 @@
 <meta name="MobileOptimized" content="320" />
 <meta name="format-detection" content="telephone = no" />
 <title>부산은행 기업금융 비대면 채널 개선</title>
-<link rel="stylesheet" href="../../../resources/css/sbe/reset.css">
-<link rel="stylesheet" href="../../../resources/css/sbe/fonts.css">
+<link rel="stylesheet" href="../../../resources/css/mbe/reset.css">
+<link rel="stylesheet" href="../../../resources/css/mbe/fonts.css">
 <link rel="stylesheet" href="./css/guide.css">
 
-<script type="text/javascript" src="../../../resources/js/sbe/jquery-3.6.0.min.js"></script>
+<script type="text/javascript" src="../../../resources/js/mbe/jquery-3.6.0.min.js"></script>
 <style>
 	.guide_box{margin-top:15px;}
 </style>
@@ -22,7 +22,7 @@
 <div class="guide_wrap">
 	<h1 class="gd">Directory List</h1>
 
-	<h2 class="gd2">1. HTML : /sbe/</h2>
+	<h2 class="gd2">1. HTML : /mbe/</h2>
 	<table class="guide_tbl">
 		<caption></caption>
 		<col width="10%">
@@ -57,7 +57,7 @@
 		<tbody>
 			<tr>
 				<td>/css/</td>
-				<td>/sbe/</td>
+				<td>/mbe/</td>
 				<td></td>
 				<td></td>
 			</tr>
@@ -102,7 +102,7 @@
 		<tbody>
 			<tr>
 				<td>/images/</td>
-				<td>/sbe/</td>
+				<td>/mbe/</td>
 				<td></td>
 				<td></td>
 			</tr>
@@ -123,7 +123,7 @@
 		<tbody>
 			<tr>
 				<td>/js/</td>
-				<td>/sbe/</td>
+				<td>/mbe/</td>
 				<td></td>
 				<td></td>
 			</tr>
