--- a/publish/_html/mbe/guide/select.html
+++ b/publish/_html/mbe/guide/select.html
@@ -52,7 +52,7 @@
 		<div class="contents">
 
 			<div class="guide_wrap">
-				<h1 class="gd">selectbox Guide</h1>
+				<h1 class="gd">SELECT Guide</h1>
 				<ul class="guide_list">
 					<!-- <li>onclick 으로 사용한다.</li>
 					<li>레이어팝업 닫기 : onclick="layerOpenFn('#IDNAME');"</li> -->
@@ -61,7 +61,7 @@
 							</li -->
 				</ul>
 
-				<h2 class="gd2">레이어팝업</h2>
+				<h2 class="gd2">SELECT : 콤보박스</h2>
 				<div class="guide_box">
 					<div class="style_area">
 						<!-- markup -->
@@ -79,7 +79,64 @@
 		<span class="combo_title" aria-hidden="true">출금계좌</span>
 	</button>
 </span>
+						</xmp>
+					</div>
+				</div>
 
+				<h2 class="gd2">SELECT : LISTBOX</h2>
+				<div class="guide_box">
+					<div class="style_area">
+						<!-- markup -->
+						<article class="layer_wrap float_bottom" id="combobox01" role="listBox" aria-hidden="false" style="visibility:visible;position:static;">
+							<div class="layer_box" style="display:block;position:static;">
+						
+								<div class="layer_container">
+									<div class="layer_contents">
+										<div class="combo_list_wrap">
+											<ul class="combo_list">
+												<li>
+													<button type="button" class="combo_opt">
+														<span>옵션01</span>
+													</button>
+												</li>
+												<li>
+													<button type="button" class="combo_opt">
+														<span>옵션02</span>
+													</button>
+												</li>
+												<li>
+													<button type="button" class="combo_opt">
+														<span>옵션03</span>
+													</button>
+												</li>
+												<li>
+													<button type="button" class="combo_opt">
+														<span>옵션04</span>
+													</button>
+												</li>
+												<li>
+													<button type="button" class="combo_opt">
+														<span>옵션05</span>
+													</button>
+												</li>
+												<li>
+													<button type="button" class="combo_opt">
+														<span>옵션06</span>
+													</button>
+												</li>
+											</ul>
+										</div>
+									</div>
+								</div>
+								
+								<!-- <button type="button" class="layer_close"><em class="blind">닫기</em></button> -->
+							</div>
+						</article>
+						<!-- //markup -->
+					</div>
+					<div class="html_area">
+						<xmp>
+<!-- layer -->
 <article class="layer_wrap float_bottom" id="combobox01" role="listBox" aria-hidden="true">
 	<div class="layer_box">
 
@@ -125,6 +182,7 @@
 		<!-- <button type="button" class="layer_close"><em class="blind">닫기</em></button> -->
 	</div>
 </article>
+<!-- // layer -->
 						</xmp>
 					</div>
 				</div>
@@ -188,7 +246,7 @@
 				<!-- <button type="button" class="layer_close"><em class="blind">닫기</em></button> -->
 			</div>
 		</article>
-		<!-- layer -->
+		<!-- // layer -->
 
 	</div>
 	<!-- //container -->
