--- a/publish/_html/mbe/left.html
+++ b/publish/_html/mbe/left.html
@@ -129,6 +129,7 @@ html {overflow-y:auto;}
 							<li><a href="./guide/directory.html" target="loFrmContent">- Directory List</a></li>
 						</ul>
 					</li>
+					<li><a href="./guide/form.html" target="loFrmContent">FORM</a></li>
 					<li><a href="./guide/tab.html" target="loFrmContent">TAB</a></li>
 					<li><a href="./guide/select.html" target="loFrmContent">SELECT</a></li>
 					<li><a href="./guide/layer.html" target="loFrmContent">LAYER POPUP</a></li>
