--- a/publish/mbe/jsp/cmn/index.html
+++ b/publish/mbe/jsp/cmn/index.html
@@ -8,7 +8,7 @@
 <link rel="stylesheet" type="text/css" href="../../../resources/css/mbe/reset.css">
 <link rel="stylesheet" type="text/css" href="../../../resources/css/mbe/fonts.css">
 <link rel="stylesheet" type="text/css" href="../../../resources/css/mbe/layout.css">
-<link rel="stylesheet" type="text/css" href="../../../resources/css/mbe/contents.css">333333333
+<link rel="stylesheet" type="text/css" href="../../../resources/css/mbe/contents.css">
 
 <script type="text/javascript" src="../../../resources/js/mbe/jquery-3.6.0.min.js"></script>
 <script type="text/javascript" src="../../../resources/js/mbe/ui_style.js"></script>
