--- a/publish/_html/mbe/guide/select.html
+++ b/publish/_html/mbe/guide/select.html
@@ -14,6 +14,7 @@
 <script type="text/javascript" src="../../../resources/js/mbe/ui_style.js"></script>
 
 <link rel="stylesheet" href="./css/guide.css">
+<script type="text/javascript" src="./js/layout_html.js"></script>
 
 </head>
 <body>
@@ -21,30 +22,16 @@
 <!-- wrap -->
 <div id="wrap">
 	<!-- header -->
-	<header id="header">
-		<div class="header_inner">
-			<h1 class="logo">부산은행</h1>
-			<button type="button" class="btn_gnb" aria-haspopup="true" aria-controls="gnbWrap">GNB MENU</button>
-		</div>
-	</header>
+	<script>
+		headerHtml();
+	</script>
 	<!-- //header -->
 
-	<nav id="gnbWrap" aria-hidden="true" aria-label="전체메뉴">
-		<div class="gnb_box">
-			<div class="gnb_list_box">
-				<ul>
-					<li><a href="#">GNB MENU</a></li>
-					<li><a href="#">GNB MENU</a></li>
-					<li><a href="#">GNB MENU</a></li>
-					<li><a href="#">GNB MENU</a></li>
-					<li><a href="#">GNB MENU</a></li>
-					<li><a href="#">GNB MENU</a></li>
-				</ul>
-			</div>
-			
-			<button type="button" class="gnb_close"><em class="blind">닫기</em></button>
-		</div>
-	</nav>
+	<!-- gnb -->
+	<script>
+		gnbHtml();
+	</script>
+	<!-- gnb -->
 
 	<!-- container -->
 	<div id="container">
