체크 라디오 박스 수정

--- a/publish/_html/mbe/guide/form.html
+++ b/publish/_html/mbe/guide/form.html
@@ -49,14 +49,14 @@
 							</li -->
 				</ul>
 
+				<!-- CHECKBOX -->
 				<h2 class="gd2">CHECKBOX</h2>
 				<div class="guide_box">
 					<div class="style_area">
 						<!-- markup -->
 						<span class="inp_check">
 							<input type="checkbox" id="chk01" />
-							<span  class="ico_check" aria-hidden="true"></span>
-							<label for="chk01">체크박스</label>
+							<label for="chk01" class="label_txt">체크박스</label>
 						</span>
 						<!-- //markup -->
 					</div>
@@ -64,31 +64,29 @@
 						<xmp>
 <span class="inp_check">
 	<input type="checkbox" id="chk01" />
-	<span  class="ico_check" aria-hidden="true"></span>
-	<label for="chk01">체크박스</label>
+	<label for="chk01" class="label_txt" class="label_txt">체크박스</label>
 </span>
 						</xmp>
 					</div>
 				</div>
+				<!-- // CHECKBOX -->
 
+				<!-- RADIO -->
 				<h2 class="gd2">RADIO</h2>
 				<div class="guide_box">
 					<div class="style_area">
 						<!-- markup -->
 						<span class="inp_radio">
 							<input type="radio" id="rdo01" name="rdo_group01" checked />
-							<span  class="ico_check" aria-hidden="true"></span>
-							<label for="rdo01">라디오박스1</label>
+							<label for="rdo01" class="label_txt">라디오박스1</label>
 						</span>
 						<span class="inp_radio">
 							<input type="radio" id="rdo02" name="rdo_group01" />
-							<span  class="ico_check" aria-hidden="true"></span>
-							<label for="rdo02">라디오박스2</label>
+							<label for="rdo02" class="label_txt">라디오박스2</label>
 						</span>
 						<span class="inp_radio">
 							<input type="radio" id="rdo03" name="rdo_group01" />
-							<span  class="ico_check" aria-hidden="true"></span>
-							<label for="rdo03">라디오박스3</label>
+							<label for="rdo03" class="label_txt">라디오박스3</label>
 						</span>
 						<!-- //markup -->
 					</div>
@@ -96,24 +94,41 @@
 						<xmp>
 <span class="inp_radio">
 	<input type="radio" id="rdo01" name="rdo_group01" checked />
-	<span  class="ico_check" aria-hidden="true"></span>
-	<label for="rdo01">라디오박스1</label>
+	<label for="rdo01" class="label_txt">라디오박스1</label>
 </span>
 <span class="inp_radio">
 	<input type="radio" id="rdo02" name="rdo_group01" />
-	<span  class="ico_check" aria-hidden="true"></span>
-	<label for="rdo02">라디오박스2</label>
+	<label for="rdo02" class="label_txt">라디오박스2</label>
 </span>
 <span class="inp_radio">
 	<input type="radio" id="rdo03" name="rdo_group01" />
-	<span  class="ico_check" aria-hidden="true"></span>
-	<label for="rdo03">라디오박스3</label>
+	<label for="rdo03" class="label_txt">라디오박스3</label>
 </span>
 						</xmp>
 					</div>
 				</div>
+				<!-- // RADIO -->
 
+				<!-- INPUT - TEXT -->
+				<h2 class="gd2">INPUT - TEXT</h2>
+				<div class="guide_box">
+					<div class="style_area">
+						<!-- markup -->
+						<div class="inp_txt">
+							<span class="inp_tit">이름</span>
+							<div class="inp"><input type="text" title="이름을 입력하세요."></div>
+						</div>
+						<!-- //markup -->
+					</div>
+					<div class="html_area">
+						<xmp>
+	
+						</xmp>
+					</div>
+				</div>
+				<!-- // INPUT - TEXT -->
 			</div>
+
 
 
 
