컴포넌트 작업

--- a/publish/_html/mbe/guide/form.html
+++ b/publish/_html/mbe/guide/form.html
@@ -41,13 +41,9 @@
 
 			<div class="guide_wrap">
 				<h1 class="gd">FORM Guide</h1>
-				<ul class="guide_list">
-					<!-- <li>onclick 으로 사용한다.</li>
-					<li>레이어팝업 닫기 : onclick="layerOpenFn('#IDNAME');"</li> -->
-					<!-- li>컨텐츠 내 버튼에 팝업 닫기를 할때는 .fnLayClose 를 추가한다.<br>
-								ex) &lt;button class="btn_primary <strong>fnLayClose</strong>"&gt;확인&lt;/button&gt;
-							</li -->
-				</ul>
+				<!-- <ul class="guide_list">
+					<li></li
+				</ul> -->
 
 				<!-- CHECKBOX -->
 				<h2 class="gd2">CHECKBOX</h2>
@@ -116,7 +112,8 @@
 						<!-- markup -->
 						<div class="inp_txt">
 							<span class="inp_tit">이름</span>
-							<div class="inp"><input type="text" title="이름을 입력하세요."></div>
+							<input type="text" title="이름을 입력하세요.">
+							<button class="btn_val_del" aria-hidden="true"><em class="blind">삭제</em></button>
 						</div>
 						<!-- //markup -->
 					</div>
